--- a/css/index.css
+++ b/css/index.css
@@ -22,7 +22,7 @@ header {
 }
 
 header h1 {
-  letter-spacing: 2px;
+  letter-spacing: 1.5px;
 }
 
 nav ul {
